add new project aw-books

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="grid-container">
             <div class="row">
                 <div class="column">
-                    Project 1
+                    <a href="./src/aw-boks.html">Awesome Books</a> 
                 </div>
                 <div class="column">
                     Project 2
