add todo-list project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="./src/aw-boks.html">Awesome Books</a> 
                 </div>
                 <div class="column">
-                    Project 2
+                    <a href="./src/todo.html">Today's todo</a> 
                 </div>
             </div>
             
