add html and css

--- a/src/todo.html
+++ b/src/todo.html
@@ -8,8 +8,18 @@
   <link rel="stylesheet" href="./todo.css">
 </head>
 <body>
-
-
+  <div class="container">
+    <div class="todo_list">
+      <h1>Today's ToDo</h1>
+      <div class="create_new_todo">
+        <input class="message" type="text" name="" id="" placeholder="Add a new todo">
+        <button class="add">Add</button>
+      </div>
+      <div class="wrapper">
+        <ul class="todo"></ul>
+      </div>
+    </div>
+  </div>
 
   <script src="./todo.js"></script>  
 </body>
