--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             
             <div class="row">
                 <div class="column">
-                    Project 3
+                    <a href="./src/fetch/fetch.html">Random Photo using Fetch API</a>                    
                 </div>
                 <div class="column">
                     Project 4
