--- a/src/fetch/fetch.html
+++ b/src/fetch/fetch.html
@@ -16,7 +16,7 @@
       <p>Random Dog Placeholder</p>
     </div>
   </div>
-  <div>
+  <div class="buttons">
     <button id="catBtn">Get Cat</button>
     <button id="dogBtn">Get Dog</button>
   </div>
