--- a/src/fetch/fetch.html
+++ b/src/fetch/fetch.html
@@ -10,14 +10,14 @@
 <body>
   <div class="results">
     <div class="result" id="catResult">
-      <p>Random Cat Placeholder</p>
+      <p>Random Fox Placeholder</p>
     </div>
     <div class="result" id="dogResult">
       <p>Random Dog Placeholder</p>
     </div>
   </div>
   <div class="buttons">
-    <button id="catBtn">Get Cat</button>
+    <button id="catBtn">Get Fox</button>
     <button id="dogBtn">Get Dog</button>
   </div>
 
