load more information about animal

--- a/src/fetch/fetch.html
+++ b/src/fetch/fetch.html
@@ -18,8 +18,10 @@
   </div>
   <div class="buttons">
     <button id="catBtn">Get Fox</button>
-    <button id="dogBtn">Get Dog</button>
+    <button id="dogBtn">Get Awesome Animals</button>
   </div>
+
+  <div class="about"></div>
 
   <script src="./fetch.js"></script>
 </body>
