add files for POST and GRID

--- a/src/fetch/fetch.html
+++ b/src/fetch/fetch.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./fetch.css">
 </head>  
 <body>
+  <header>
+    <h1>Beauty of the Animal World</h1>
+  </header>
   <div class="results">
     <div class="result" id="catResult">
       <p>Random Fox Placeholder</p>
