--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a href="./src/fetch/fetch.html">Random Photo using Fetch API</a>                    
                 </div>
                 <div class="column">
-                    Project 4
+                    <a href="./src/fetch/fetchPOST.html">Fetch POST API</a>                    
                 </div>
             </div>
             
