update fetchPost .html and .js

--- a/src/fetch/fetchPOST.html
+++ b/src/fetch/fetchPOST.html
@@ -4,41 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Random Cat and Dog photos</title>
-  <!-- <link rel="stylesheet" href="./fetch.css"> -->
-  <link rel="stylesheet" href="./fetch-grid.css">
-</head>  
+  <title>Fetch POST</title>
+  <link rel="stylesheet" href="./fetchPOST.css">
+</head>
 <body>
-  <div class="wrapper">
+  <div class="container">
+    <h1>Fetch request is realy simle</h1>
+    <p>
+      Post data:
+    </p>
 
-    <div class="head">
-      <h1>Beauty of the Animal World</h1>
-    </div>
+    <div class="postFetch"></div>
+  </div>
 
-    <!-- <div class="results"> -->
-      <div class="result1" id="catResult">
-        <p>Random Fox Placeholder</p>
-      </div>
-      <div class="result2" id="dogResult">
-        <p>Random Dog Placeholder</p>
-      </div>
-    <!-- </div> -->
-  
-    <!-- <div class="buttons2">
-      <div class="buttons">
-        <button id="catBtn">Get Fox</button>
-      </div>  
-      <div class="buttons">
-        <button id="dogBtn">Get Awesome Animals</button>
-      </div>
-    </div>
-
-    <div class="resultsDisplay"></div>
-
-    <div class="about"></div>
-   -->
-  </div> 
-
-  <script src="./fetch.js"></script>
+  <script src="./fetchPOST.js"></script>
 </body>
 </html>
