update fetchPost .html, .css and .js

--- a/src/fetch/fetchPOST.html
+++ b/src/fetch/fetchPOST.html
@@ -11,10 +11,13 @@
   <div class="container">
     <h1>Fetch request is realy simle</h1>
     <p>
-      Post data:
+      Get data:
     </p>
+    <div class="getFetch"></div>
 
-    <div class="postFetch"></div>
+    <div class="postFetch">    
+
+    </div>    
   </div>
 
   <script src="./fetchPOST.js"></script>
