--- a/src/fetch/fetchPOST.html
+++ b/src/fetch/fetchPOST.html
@@ -17,7 +17,11 @@
 
     <div class="postFetch">    
 
-    </div>    
+    </div> 
+    
+    <div class="putFetch">    
+
+    </div> 
   </div>
 
   <script src="./fetchPOST.js"></script>
