update fetchPost .html

--- a/src/fetch/fetchPOST.html
+++ b/src/fetch/fetchPOST.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Fetch request is realy simle</h1>
+    <h1>Fetch request is really simple</h1>
     <p>
       Get data:
     </p>
