--- a/src/fetch/fetchPOST.html
+++ b/src/fetch/fetchPOST.html
@@ -10,14 +10,15 @@
 <body>
   <div class="container">
     <h1>Fetch request is really simple</h1>
-    <p>
-      Get data:
-    </p>
+    <p>Get data:</p>
     <div class="getFetch"></div>
 
-    <div class="postFetch">    
+    <form class="form">
+      <input class="input" type="text" placeholder="add your name">
+      <button class="btn">Send</button>
+    </form>
+    <div class="postFetch"></div> 
 
-    </div> 
     
     <div class="putFetch">    
 
