--- a/14-OOP-JS/index14.html
+++ b/14-OOP-JS/index14.html
@@ -11,5 +11,6 @@
   <h1>JS 14th section: OOP </h1>
 
   <script src="./src/index.js"></script>
+  <script src="./src/challenge1.js"></script>
 </body>
 </html>
