--- a/14-OOP-JS/index14.html
+++ b/14-OOP-JS/index14.html
@@ -10,7 +10,8 @@
 <body>
   <h1>JS 14th section: OOP </h1>
 
-  <script src="./src/index.js"></script>
-  <script src="./src/challenge1.js"></script>
+  <!-- <script src="./src/index.js"></script> -->
+  <!-- <script src="./src/challenge1.js"></script> -->
+  <script src="./src/es6-classes.js"></script>
 </body>
 </html>
