--- a/14-OOP-JS/index14.html
+++ b/14-OOP-JS/index14.html
@@ -12,6 +12,8 @@
 
   <!-- <script src="./src/index.js"></script> -->
   <!-- <script src="./src/challenge1.js"></script> -->
-  <script src="./src/es6-classes.js"></script>
+  <!-- <script src="./src/es6-classes.js"></script> -->
+  <script src="./src/static.js"></script>
+  <script src="./src/challenge2.js"></script>
 </body>
 </html>
