challenge3 Class inherit from another Class using Constructor Function

--- a/14-OOP-JS/index14.html
+++ b/14-OOP-JS/index14.html
@@ -15,7 +15,8 @@
   <!-- <script src="./src/es6-classes.js"></script> -->
   <!-- <script src="./src/static.js"></script> -->
   <!-- <script src="./src/challenge2.js"></script> -->
-  <script src="./src/inheritance.js"></script>
+  <!-- <script src="./src/inheritance.js"></script> -->
+  <script src="./src/challenge3.js"></script>
 
 </body>
 </html>
