inheritance between Classes: ES6 Classes

--- a/14-OOP-JS/index14.html
+++ b/14-OOP-JS/index14.html
@@ -16,7 +16,8 @@
   <!-- <script src="./src/static.js"></script> -->
   <!-- <script src="./src/challenge2.js"></script> -->
   <!-- <script src="./src/inheritance.js"></script> -->
-  <script src="./src/challenge3.js"></script>
+  <!-- <script src="./src/challenge3.js"></script> -->
+  <script src="./src/inheritClassES6.js"></script>
 
 </body>
 </html>
