--- a/14-OOP-JS/index14.html
+++ b/14-OOP-JS/index14.html
@@ -17,7 +17,8 @@
   <!-- <script src="./src/challenge2.js"></script> -->
   <!-- <script src="./src/inheritance.js"></script> -->
   <!-- <script src="./src/challenge3.js"></script> -->
-  <script src="./src/inheritClassES6.js"></script>
+  <!-- <script src="./src/inheritClassES6.js"></script> -->
+  <script src="./src/inherClObjectCreate.js"></script>
 
 </body>
 </html>
