prepare for data Encapsulation and Protct - another Class example

--- a/14-OOP-JS/index14.html
+++ b/14-OOP-JS/index14.html
@@ -18,7 +18,8 @@
   <!-- <script src="./src/inheritance.js"></script> -->
   <!-- <script src="./src/challenge3.js"></script> -->
   <!-- <script src="./src/inheritClassES6.js"></script> -->
-  <script src="./src/inherClObjectCreate.js"></script>
+  <!-- <script src="./src/inherClObjectCreate.js"></script> -->
+  <script src="./src/ClassExample.js"></script>
 
 </body>
 </html>
