add truly Protect - public and private : fields and methods

--- a/14-OOP-JS/index14.html
+++ b/14-OOP-JS/index14.html
@@ -19,7 +19,8 @@
   <!-- <script src="./src/challenge3.js"></script> -->
   <!-- <script src="./src/inheritClassES6.js"></script> -->
   <!-- <script src="./src/inherClObjectCreate.js"></script> -->
-  <script src="./src/ClassExample.js"></script>
+  <!-- <script src="./src/ClassExample.js"></script> -->
+  <script src="./src/PublicClassFields.js"></script>
 
 </body>
 </html>
