--- a/14-OOP-JS/index14.html
+++ b/14-OOP-JS/index14.html
@@ -20,7 +20,8 @@
   <!-- <script src="./src/inheritClassES6.js"></script> -->
   <!-- <script src="./src/inherClObjectCreate.js"></script> -->
   <!-- <script src="./src/ClassExample.js"></script> -->
-  <script src="./src/PublicClassFields.js"></script>
+  <!-- <script src="./src/PublicClassFields.js"></script> -->
+  <script src="./src/challenge4.js"></script>
 
 </body>
 </html>
