add Data Attribute, classes: add, remove, toggle, contains, className

--- a/DOM-JS-advance/index.html
+++ b/DOM-JS-advance/index.html
@@ -22,6 +22,7 @@
           class="nav__logo"
           id="logo"
           designer="Jonas"
+          data-version-number="3.0"
         />
         <ul class="nav__links">
           <li class="nav__item">
@@ -322,14 +323,13 @@
       </ul>
       <img src="img/icon.png" alt="Logo" class="footer__logo" />
       <p class="footer__copyright">
-        &copy; Copyright by
+        &copy; Copyright 
         <a
           class="footer__link twitter-link"
           target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own product.
+          href="https://twitter.com/"
+          > 2022</a
+        >
       </p>
     </footer>
 
