add remove event listening

--- a/DOM-JS-advance/index.html
+++ b/DOM-JS-advance/index.html
@@ -43,6 +43,7 @@
       </nav>
 
       <div class="header__title">
+        <!-- <h1 onclick="alert('HTNL alert')"> -->
         <h1>
           When
           <!-- Green highlight effect -->
