--- a/DOM-JS-advance/index.html
+++ b/DOM-JS-advance/index.html
@@ -26,7 +26,7 @@
         />
         <ul class="nav__links">
           <li class="nav__item">
-            <a class="nav__link" href="#" >Features</a>
+            <a class="nav__link" href="#section--1" >Features</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#section--2">Operations</a>
