add script async defer

--- a/DOM-JS-advance/index.html
+++ b/DOM-JS-advance/index.html
@@ -12,6 +12,8 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Bankist | When Banking meets Minimalist</title>
+
+    <!-- <script defer src="script.js"></script> -->
   </head>
   <body>
     <header class="header">
