add send request and recieve data

--- a/ASYNC/index.html
+++ b/ASYNC/index.html
@@ -24,7 +24,7 @@
         </div>
       </article>
     </div>
-
+    <!-- <button class="btn-country">Where am I?</button> -->
     <div class="images"></div>
   </main> 
 
