add catch method

--- a/ASYNC/index.html
+++ b/ASYNC/index.html
@@ -26,7 +26,7 @@
       </article>
     -->
     </div>
-    <!-- <button class="btn-country">Where am I?</button> -->
+    <button class="btn-country">Where am I?</button>
     <div class="images"></div>
   </main> 
 
