add event loop in practice

--- a/ASYNC/index.html
+++ b/ASYNC/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Asynchronous JavaScript</title>
   <link rel="stylesheet" href="./src/style.css">
-  <!-- <script defer src="src/index.js"></script> -->
+  <script defer src="src/index.js"></script>
 </head>
 <body>
   <p></p>
@@ -31,6 +31,6 @@
   </main> 
 
   <!-- <script src="./src/index.js"></script> -->
-  <script src="./src/challenge1.js"></script>
+  <!-- <script src="./src/challenge1.js"></script> -->
 </body>
 </html>
