--- a/ASYNC/index.html
+++ b/ASYNC/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Asynchronous JavaScript</title>
   <link rel="stylesheet" href="./src/style.css">
-  <script defer src="src/index.js"></script>
+  <!-- <script defer src="src/index.js"></script> -->
 </head>
 <body>
   <p></p>
@@ -32,5 +32,6 @@
 
   <!-- <script src="./src/index.js"></script> -->
   <!-- <script src="./src/challenge1.js"></script> -->
+  <script src="./src/challenge2.js"></script>
 </body>
 </html>
