--- a/Modules/index.html
+++ b/Modules/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script defer src="script.js"></script>
+    <script type="module" defer src="script.js"></script>
     <title>Modern JavaScript Development: Modules and Tooling</title>
     <style>
       body {
         height: 100vh;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         background: linear-gradient(to top left, #28b487, #7dd56f);
       }
       h1 {
-        font-family: sans-serif;
+        font-family: 'Rubik', sans-serif;
         font-size: 50px;
         line-height: 1.3;
         width: 100%;
