add parcel: use parcel

--- a/ASYNC/index.html
+++ b/ASYNC/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <p></p>
-  <img class="bear" src="" alt="">
+  <img class="bear">
   <main class="container">
     <div class="countries">
       <!--  
