--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <a href="./Modules/index.html">Modules in JavaScript</a>
                 </div>
                 <div class="column">
-                    <a href="#">Next Project</a> 
+                    <a href="./advanced-js/index.html">Advansed JavaScript 2022</a> 
                 </div>
             </div>
             
