--- a/advanced-js/index.html
+++ b/advanced-js/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Advanced JavaScript Crash Course 2022</h1>
 
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
+  <script src="script.js"></script>
 </body>
 </html>
