--- a/Array/index.html
+++ b/Array/index.html
@@ -16,6 +16,7 @@
     <li>filter</li>
   </ul>
 
-  <script src="./index.js"></script>
+  <!-- <script src="index.js"></script> -->
+  <script src="map.js"></script>
 </body>
 </html>
