add setSelectionRange function

--- a/setSelectionRange/index.html
+++ b/setSelectionRange/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <h1>setSelectionRange</h1>
+  <p>
+    <input type="text" id="mytextbox" size="20" value="Mozilla Firefox">
+  </p>
+  <p>
+    <button onclick="selectText()">Select Text</button>
+  </p>
 
   <script src="setSelectionRange.js"></script>
 </body>
