--- a/Array/project/index.html
+++ b/Array/project/index.html
@@ -125,5 +125,6 @@
 
     <script src="script.js"></script>
     <!-- <script src="challenge1.js"></script> -->
+    <!-- <script src="challenge2.js"></script> -->
   </body>
 </html>
