--- a/Array/project/index.html
+++ b/Array/project/index.html
@@ -126,5 +126,6 @@
     <script src="script.js"></script>
     <!-- <script src="challenge1.js"></script> -->
     <!-- <script src="challenge2.js"></script> -->
+    <script src="challenge3.js"></script>
   </body>
 </html>
