--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -25,7 +25,14 @@
       const id = document.getElementById('id');
 
       // fetch post request
-      fetch('https://jsonplaceholder.typicode.com/posts')
+      fetch('https://jsonplaceholder.typicode.com/posts', {
+        method: 'POST',
+        body: JSON.stringify({
+          title: name,
+          body: body,
+          id: id,
+        })
+      })
 
 
     })
