--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -31,10 +31,13 @@
           title: name,
           body: body,
           id: id,
-        })
+        }),
+        headers: {
+          'Content-type': 'application/json; charset=UTF-8',
+        },
       })
-
-
+      .then((response) => response.json())
+      .then((data) => console.log('data: ', data));
     })
   </script>
   
