fetch api example: add values

--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -20,9 +20,9 @@
     form.addEventListener('submit', (e) => {
       // auto submission of the form
       e.preventDefault();
-      const name = document.getElementById('name');
-      const body = document.getElementById('body');
-      const id = document.getElementById('id');
+      const name = document.getElementById('name').value;
+      const body = document.getElementById('body').value;
+      const id = document.getElementById('id').value;
 
       // fetch post request
       fetch('https://jsonplaceholder.typicode.com/posts', {
@@ -39,6 +39,8 @@
       .then((response) => response.json())
       .then((data) => console.log('data: ', data));
     })
+    // output
+    // data:  {title: 'MyName', body: 'This is a body', id: 101}
   </script>
   
 </body>
