--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -46,16 +46,14 @@
 
         result.innerHTML = `
           <p>
-            The title of the todo is ${data.title}  
+            The title of the todo is: "${data.title}"  
           </p>
           <p>
-            The body of the todo is ${data.body}  
+            The body of the todo is: "${data.body}"  
           </p>
         `;
-
-      })
-        
-    })
+      });        
+    });
     
     // output
     // data:  {title: 'MyName', body: 'This is a body', id: 101}
