--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -28,17 +28,49 @@
       // const id = document.getElementById('id').value;
 
       // fetch post request
-      fetch('https://jsonplaceholder.typicode.com/posts', {
-        method: 'POST',
-        body: JSON.stringify({
-          title: name,
-          body: body,
+      // fetch('https://jsonplaceholder.typicode.com/posts', {
+      //   method: 'POST',
+      //   body: JSON.stringify({
+      //     title: name,
+      //     body: body,
           // id: id,
-        }),
-        headers: {
-          'Content-type': 'application/json; charset=UTF-8',
-        },
-      })
+    //     }),
+    //     headers: {
+    //       'Content-type': 'application/json; charset=UTF-8',
+    //     },
+    //   })
+    //   .then((response) => response.json())
+    //   .then((data) => {
+    //     console.log('data: ', data);
+    //     const result = document.getElementById('result');
+
+    //     result.innerHTML = `
+    //       <p>
+    //         The title of the todo is: "${data.title}"  
+    //       </p>
+    //       <p>
+    //         The body of the todo is: "${data.body}"  
+    //       </p>
+    //     `;
+    //   });        
+    // });
+        
+    // output
+    // data:  {title: 'MyName', body: 'This is a body', id: 101}
+
+    // fetch put request 
+    fetch('https://jsonplaceholder.typicode.com/posts/1', {
+    method: 'PUT',
+    body: JSON.stringify({
+        id: 1,
+        title: name,
+        body: body,
+        userId: 1,
+      }),
+      headers: {
+        'Content-type': 'application/json; charset=UTF-8',
+      },
+     })
       .then((response) => response.json())
       .then((data) => {
         console.log('data: ', data);
@@ -52,11 +84,9 @@
             The body of the todo is: "${data.body}"  
           </p>
         `;
-      });        
-    });
-    
-    // output
-    // data:  {title: 'MyName', body: 'This is a body', id: 101}
+      });
+    })
+
   </script>
   
 </body>
