fetch api example: put - updating a resource

--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -58,7 +58,7 @@
     // output
     // data:  {title: 'MyName', body: 'This is a body', id: 101}
 
-    // fetch put request 
+    // fetch put request - updating a resource
     fetch('https://jsonplaceholder.typicode.com/posts/1', {
     method: 'PUT',
     body: JSON.stringify({
