--- a/Repeat/async/index.html
+++ b/Repeat/async/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Async</h1>
 
-  <script src="index.js"></script>
+  <!-- <script src="index.js"></script> -->
+  <script src="../get-id.js"></script>
 </body>
 </html>
